more changes for nfs + ecs

--- a/examples/compose/matomo.env
+++ b/examples/compose/matomo.env
@@ -16,7 +16,7 @@ SSMTP_PASSWORD=
 SSMTP_TLS=YES
 
 SESSION_SAVE_HANDLER=redis
-SESSION_SAVE_PATH=tcp:\/\/matomo_redis:6379
+SESSION_SAVE_PATH=tcp:\/\/matomo_redis:6379?database=10
 
 REDIS_HOST=redis
 REDIS_PORT=6379
